--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,18 @@
     <string name="title_activity_new_home">NewHomeActivity</string>
 
     <string-array name="Country">
-        <item>"Egypt"</item>
+        <item>"Egypt , Cairo"</item>
     </string-array>
 
     <string-array name="Cities">
         <item>"Cairo"</item>
-        <item>"Sharm-ElSheikh"</item>
     </string-array>
 
+    <string-array name="Class">
+        <item>"Economy"</item>
+        <item>"Business"</item>
+        <item>"First"</item>
+    </string-array>
     <string-array name="currencyFrom">
         <item>"Dollar"</item>
         <item>"Egyptian Pound"</item>
@@ -30,4 +34,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
 </resources>
